--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,8 @@
 
 @import "blocks/btn";
 @import "blocks/modal";
+@import "blocks/header";
+@import "blocks/footer";
 
 // ---------------------------------
 
