--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -31,7 +31,7 @@ $fz-default: 16px;
 // https://www.artlebedev.ru/kovodstvo/sections/159/#13
 $ff-rouble: "Rouble", "Arial", sans-serif;
 
-$ff-placeholder: "Placeholder", "Arial", sans-serif;
+$ff-placeholder: "Manrope", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
