--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,6 +5,7 @@
 }
 
 .header__container {
+  position: relative;
   max-width: 1240px;
   margin: 0 auto;
   display: flex;
@@ -20,6 +21,127 @@
   align-items: center;
   justify-content: center;
   background-color: $color-default-white;
+  border-radius: 50%;
+
+  &:hover {
+    @include hover;
+    outline: 1px solid #316dc2;
+    border-radius: 50%;
+  }
+
+  &:not(:disabled):focus {
+    @include focus;
+    outline: 1px solid #316dc2;
+    border-radius: 50%;
+  }
+
+  &:active {
+    @include active;
+    outline: 1px solid #052756;
+    border-radius: 50%;
+  }
+}
+
+.header__nav {
+  position: absolute;
+  top: 88px;
+  right: 0;
+}
+
+.header__nav-list {
+  margin: 0;
+  padding: 0;
+  display: none;
+  flex-direction: column;
+  gap: 28px;
+  width: 286px;
+  min-height: fit-content;
+  list-style: none;
+  background-color: #316dc2;
+  border-radius: 16px;
+  padding: 35px 25px;
+
+  & li {
+    line-height: 16px;
+    font-weight: 400;
+    color: $color-default-white;
+    letter-spacing: 0.32px;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+  }
+
+  & a {
+    color: rgba(255, 255, 255, 0.7);
+    display: flex;
+    width: fit-content;
+
+    &:hover {
+      @include hover;
+      color: rgba(255, 255, 255, 1);
+    }
+
+    &:focus {
+      @include focus;
+      color: rgba(255, 255, 255, 1);
+    }
+
+    &:active {
+      @include active;
+      outline: 1px solid $color-default-white;
+      outline-offset: 5px;
+    }
+  }
+}
+
+.header__nav-link {
+  position: relative;
+  flex-direction: column;
+  padding-right: 22px;
+  order: 1;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 12px;
+    height: 12px;
+    background-image: url("../../img/svg/nav-bird.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 1px;
+    right: 0;
+  }
+}
+
+.header .header__nav-link--bold {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.header__nav-sublist--closed {
+  display: none;
+  margin: 0;
+  margin-top: 20px;
+  padding: 0;
+  list-style: none;
+  padding-left: 16px;
+  flex-direction: column;
+  gap: 16px;
+  order: 2;
+
+  & li {
+    text-transform: none;
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
+
+.header__nav-sublist--opened {
+  display: flex;
+}
+
+.header__nav-sublist--opened ~ .header__nav-link {
+  &::after {
+    transform: rotate(180deg);
+  }
 }
 
 .header__button {
@@ -36,6 +158,21 @@
   color: #316dc2;
   text-transform: uppercase;
   cursor: pointer;
+
+  &:hover {
+    @include hover;
+    border: 2px solid #316dc2;
+  }
+
+  &:not(:disabled):focus {
+    @include focus;
+    border: 2px solid #316dc2;
+  }
+
+  &:active {
+    @include active;
+    border: 2px solid #052756;
+  }
 
   &::after {
     position: absolute;
@@ -58,16 +195,112 @@
   }
 }
 
+.header__nav--closed .header__nav-list {
+  display: none;
+}
+
+.header__nav--opened .header__nav-list {
+  display: flex;
+}
+
+.header__nav--opened ~ .header__button {
+  position: relative;
+  width: 286px;
+  min-height: 54px;
+  border-radius: 30px;
+  background-color: #316dc2;
+  padding-left: 20px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  color: $color-default-white;
+  text-transform: uppercase;
+  cursor: pointer;
+  text-align: start;
+  border: none;
+
+  &:not(:disabled):focus {
+    @include focus;
+    border: none;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    display: flex;
+    width: 46px;
+    height: 46px;
+    top: 4px;
+    right: 4px;
+    background-color: $color-default-white;
+    border-radius: 50%;
+    background-image: url("../../img/svg/burger-close.svg");
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    background-position: center;
+  }
+}
+
+.header__nav--opened ~ .header__logo {
+  margin-top: 10px;
+}
+
+.header__nav--opened ~ .header__button {
+  margin-top: 10px;
+}
+
+.menu--opened {
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    position: absolute;
+    content: "";
+    background: rgba(13, 29, 51, 0.4);
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+}
+
 @media (max-width: $tablet-width) {
   .header__container {
     max-width: 100%;
     margin: 0;
     padding-top: 31px;
   }
+
+  .header__nav--opened ~ .header__logo {
+    margin-top: 0;
+  }
+
+  .header__nav--opened ~ .header__button {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: $mobile-width) {
   .header__container {
     padding-top: 20px;
+  }
+
+  .header__nav {
+    top: 78px;
+  }
+
+  .header__nav--opened ~ .header__button {
+    width: 100%;
+  }
+
+  .header__nav--opened ~ .header__logo {
+    display: none;
+  }
+
+  .header__nav--opened {
+    width: 100%;
+  }
+
+  .header__nav--opened .header__nav-list{
+    width: 100%;
   }
 }
