--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -267,7 +267,7 @@
   .header__container {
     max-width: 100%;
     margin: 0;
-    padding-top: 31px;
+    padding: 31px 30px 0;
   }
 
   .header__nav--opened ~ .header__logo {
