--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -30,8 +30,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-
-  background-color: $color-default-white;
+  background-color: #f0efe9;
 }
 
 a {
