--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
@@ -22,6 +23,7 @@
 @import "blocks/modal";
 @import "blocks/header";
 @import "blocks/footer";
+@import "blocks/intro";
 
 // ---------------------------------
 
