--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 
 @import "vendor/normalize";
 @import "vendor/swiper";
+@import "vendor/custom-select";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
@@ -24,6 +25,8 @@
 @import "blocks/header";
 @import "blocks/footer";
 @import "blocks/intro";
+@import "blocks/form";
+@import "blocks/about";
 
 // ---------------------------------
 
