--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -5,19 +5,15 @@
   bottom: 0;
   left: 0;
   z-index: 1000;
-
   display: flex;
   flex-direction: column;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-
-  background-color: rgba($color-default-black, 0.8);
+  background-color: rgba(13, 29, 51, 0.4);
   transform: scale(1.2);
   visibility: hidden;
   opacity: 0;
-
-  transition: opacity $trans-modal,
-    transform $trans-modal,
+  transition: opacity $trans-modal, transform $trans-modal,
     visibility $trans-modal;
 
   pointer-events: none;
@@ -31,58 +27,72 @@
 
   &__wrapper {
     position: relative;
-
     display: flex;
     flex-shrink: 0;
     justify-content: center;
-    align-items: center;
     width: 100%;
-    min-height: 100%;
-    padding: 60px 40px;
-
-    @include vp-767 {
-      padding: 60px 16px;
-    }
+    min-height: 800px;
+    padding: 90px 99px;
   }
 
   &__overlay {
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
-
     cursor: pointer;
   }
 
   &__content {
     position: relative;
-
-    width: 600px;
-    padding: 40px;
-
+    width: 510px;
+    padding: 50px 80px 60px;
     background-color: $color-default-white;
-
-    @include vp-767 {
-      width: 100%;
-      padding: 20px;
-    }
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__close-btn {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 30px;
+    right: 30px;
     z-index: 1;
-
-    width: 40px;
-    height: 40px;
+    width: 22px;
+    height: 22px;
     padding: 0;
-
     background: $color-transparent;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+      @include hover;
+      outline: 1px solid #316dc2;
+    }
+
+    &:not(:disabled):focus {
+      @include focus;
+      outline: 1px solid #316dc2;
+    }
+
+    &:active {
+      @include active;
+      outline: 1px solid #275699;
+    }
+
+    &:active svg{
+      @include active;
+      color: #275699;
+    }
+
+    & svg {
+      color: #316dc2;
+    }
   }
 
   &--responsive {
@@ -115,5 +125,59 @@
     opacity: 1;
 
     pointer-events: auto;
+  }
+
+  &__title {
+    margin: 0;
+    font-size: 32px;
+    line-height: 36px;
+    color: #316dc2;
+    font-weight: 400;
+    margin-bottom: 20px;
+  }
+
+  &__description {
+    margin: 0;
+    display: flex;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .modal {
+    &__wrapper {
+      min-height: 568px;
+      padding: 23px 15px;
+    }
+
+    &__content {
+      position: relative;
+      width: 100%;
+      padding: 40px 15px;
+    }
+
+    &__close-btn {
+      top: 20px;
+      right: 20px;
+      width: 16px;
+      height: 16px;
+    }
+
+    &__title {
+      margin: 0;
+      font-size: 18px;
+      line-height: 18px;
+      margin-bottom: 15px;
+    }
+
+    &__description {
+      margin: 0;
+      margin-bottom: 25px;
+      font-size: 14px;
+      line-height: 20px;
+      text-align: center;
+      max-width: 210px;
+    }
   }
 }
