--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,7 @@
 @import "blocks/intro";
 @import "blocks/form";
 @import "blocks/about";
+@import "blocks/programs";
 
 // ---------------------------------
 
