--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,12 @@
 @import "blocks/form";
 @import "blocks/about";
 @import "blocks/programs";
+@import "blocks/conditions.scss";
+@import "blocks/news";
+@import "blocks/faq";
+@import "blocks/opinions";
+@import "blocks/contacts";
+@import "blocks/feedback";
 
 // ---------------------------------
 
