--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,6 +4,7 @@
 @import "vendor/normalize";
 @import "vendor/swiper";
 @import "vendor/custom-select";
+@import "vendor/data-accordion";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
