--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,7 +1,5 @@
-.news__container {
-  max-width: 1240px;
+.news {
   padding: 120px 0 60px;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -14,26 +12,20 @@
     color: #316dc2;
     margin: 0;
   }
+}
 
-  & ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-    max-width: 100%;
-  }
+.news__controls-slide {
+  width: fit-content;
 
-  .is-active {
+  &.is-active {
     border: 1px solid #316dc2;
     border-radius: 20px;
-    color: #316dc2;
+    color: rgb(49, 110, 196, 1);
   }
 }
 
 .news__control {
-  padding: 14px 26px;
+  padding: 14px 21px 14px 22px;
   border: none;
   font-size: 14px;
   line-height: 14px;
@@ -66,6 +58,15 @@
     border-radius: 20px;
     cursor: default;
   }
+}
+
+.news__container {
+  max-width: 1240px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
 }
 
 .news__swiper {
@@ -123,6 +124,7 @@
 
 .news__slide--career {
   background-image: url("../../img/news/career.jpg");
+  order: 4;
 }
 
 .news__text {
@@ -269,7 +271,6 @@
   position: relative;
   min-height: 32px;
   width: 100%;
-  min-height: 32px;
 }
 
 .news__slider-button {
@@ -379,20 +380,21 @@
 }
 
 @media (max-width: $tablet-width) {
-  .news__container {
-    max-width: 738px;
-    padding: 100px 30px 50px;
-    margin: 0 auto;
-    gap: 0;
+  .news {
+    padding: 100px 0 50px;
+    gap: 0px;
 
     & h2 {
       font-size: 34px;
       margin-bottom: 30px;
     }
+  }
 
-    & ul {
-      gap: 0;
-    }
+  .news__container {
+    max-width: 100%;
+    padding: 0 30px;
+    margin: 0;
+    gap: 30px;
   }
 
   .news__control {
@@ -400,19 +402,18 @@
   }
 
   .swiper .news__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    max-width: 100%;
+    min-height: 730px;
     margin-bottom: 30px;
   }
 
   .news__slide {
-    max-width: 324px;
+    max-width: 100%;
+    min-width: 324px;
     min-height: 350px;
     margin-top: 30px;
 
     &:first-child {
-      max-width: 324px;
+      max-width: 100%;
 
       & .news__text {
         max-width: 240px;
@@ -430,6 +431,22 @@
         }
       }
     }
+  }
+
+  .news__slide--internship {
+    order: 1;
+  }
+
+  .news__slide--travel {
+    order: 3;
+  }
+
+  .news__slide--volunteering {
+    order: 4;
+  }
+
+  .news__slide--career {
+    order: 2;
   }
 
   .news__text {
@@ -454,23 +471,30 @@
 }
 
 @media (max-width: $mobile-width) {
-  .news__container {
-    max-width: 290px;
-    padding: 67px 0 33px;
-    margin: 0 auto;
-    gap: 0;
+  .news {
     overflow: hidden;
+    padding:72px 0 33px;
 
     & h2 {
       font-size: 20px;
       line-height: 20px;
     }
+  }
 
-    & ul {
-      gap: 0;
-      justify-content: center;
-      gap: 12px;
-    }
+  .news__container {
+    max-width: 100%;
+    padding: 0 0;
+    margin: 0;
+    gap: 24px;
+  }
+
+  .news__controls-swiper {
+    width: 100%;
+    margin-left: 15px;
+  }
+
+  .news__controls-wrapper {
+    flex-wrap: nowrap;
   }
 
   .news__control {
@@ -486,6 +510,7 @@
 
   .news__slide {
     max-width: 100%;
+    min-width: 290px;
     min-height: 330px;
     margin-top: 30px;
 
