done contacts, feedback blocks

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "vendor/swiper";
 @import "vendor/custom-select";
 @import "vendor/data-accordion";
+@import "vendor/leaflet";
 // Swiper 7.4.1
 // @import "vendor/swiper";
 
