--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,10 +1,14 @@
-.form {
-  width: 100%;
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
-  & form {
+  & .custom-select {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 8px;
+    padding: 0;
+    margin: 0;
   }
 }
 
@@ -23,6 +27,18 @@
     font-size: 14px;
     line-height: 18px;
     color: rgba(72, 72, 72, 0.8);
+  }
+
+  & .is-invalid {
+    color: #ff5e66;
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  & .is-valid {
+    color: #11df07;
+    font-size: 12px;
+    line-height: 12px;
   }
 
   & input,
@@ -58,7 +74,7 @@
       background-color: rgba(169, 175, 183, 0.2);
     }
 
-    &:invalid:not(:placeholder-shown) {
+    &:invalid {
       border-color: #ff5e66;
       background-color: rgba(255, 94, 102, 0.2);
     }
@@ -140,8 +156,11 @@
     height: 10px;
     background-image: url("../../img/svg/check.svg");
     background-repeat: no-repeat;
-    top: 7px;
+    top: 5px;
     left: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   & input {
@@ -164,7 +183,7 @@
   width: 20px;
   height: 20px;
   background-color: #316dc2;
-  top: 0;
+  top: 1px;
   left: 0;
   border-radius: 2px;
 
