--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -1,10 +1,10 @@
 .faq__container {
   max-width: 1240px;
-  padding: 60px 0;
+  padding: 65px 0;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 65px;
   align-items: center;
 
   & h2 {
@@ -13,6 +13,7 @@
     line-height: 50px;
     font-weight: 400;
     color: #316dc2;
+    letter-spacing: -1.5px;
   }
 }
 
@@ -24,6 +25,7 @@
   padding: 0;
   list-style: none;
   width: 100%;
+  max-width: 1028px;
 }
 
 .faq__item {
@@ -32,10 +34,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 40px;
-  justify-content: space-between;
-  border: 1px solid #316dc2;
+  padding: 35px 40px 30px;
+  outline: 1px solid #316dc2;
   min-height: 120px;
+  justify-content: center;
 
   &:hover {
     background-color: $color-default-white;
@@ -75,7 +77,7 @@
     background-color: #275699;
   }
 
-  &:hover > button:active:before {
+  &:hover > button:active::before {
     border: 1px solid $color-default-white;
   }
 
@@ -88,22 +90,30 @@
   }
 }
 
+.faq__text {
+  overflow-y: auto;
+}
+
 .faq__item.is-active {
   background-color: #316dc2;
+  padding-bottom: 32px;
+  padding-top: 42px;
+  min-height: 204px;
 
   & h3 {
     color: $color-default-white;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
 
   & p {
     color: $color-default-white;
     margin: 0;
     max-width: 700px;
+    letter-spacing: -0.5px;
   }
 
   & button {
-    top: 60px;
+    top: 40px;
   }
 
   &:hover button {
@@ -147,17 +157,17 @@
 .faq__title {
   margin: 0;
   font-size: 28px;
-  line-height: 40px;
+  line-height: 35px;
   color: #316dc2;
   font-weight: 400;
   max-width: 70%;
+  letter-spacing: -0.9px;
 }
 
 .faq__button {
   position: absolute;
-  top: 50%;
+  top: 40px;
   right: 40px;
-  transform: translate(0, -50%);
   cursor: pointer;
   width: 40px;
   height: 40px;
@@ -186,13 +196,50 @@
       left: 19px;
     }
 
+    &:focus-visible {
+      outline: none;
+    }
+
     &:active {
       background-color: #275699;
     }
   }
 
+  &:hover {
+    @include hover;
+    background-color: transparent;
+    border: 1px solid $color-default-white;
+  }
+
+  &:hover::before {
+    @include hover;
+    border-color: $color-default-white;
+  }
+
+  &:focus {
+    @include focus;
+    background-color: transparent;
+    border: 1px solid $color-default-white;
+  }
+
+  &:focus::before {
+    @include hover;
+    border-color: $color-default-white;
+  }
+
+  &:active {
+    @include focus;
+    background-color: $color-default-white;
+  }
+
+  &:active::before {
+    @include hover;
+    border-color: #275699;
+  }
+
   &.is-opened {
     background-color: $color-default-white;
+
     &::before {
       position: absolute;
       content: "";
@@ -216,48 +263,62 @@
 
     & h2 {
       font-size: 34px;
+      letter-spacing: -1px;
     }
   }
 
   .faq__item {
     width: 100%;
-    padding: 30px;
-    min-height: 102px;
+    padding: 12px 30px 10px;
+    min-height: 100px;
     justify-content: center;
   }
 
   .faq__item.is-active {
+    padding: 37px 30px 25px;
+    min-height: 192px;
+    justify-content: flex-start;
+
     & button {
       right: 30px;
-      top: 50px;
+      top: 30px;
     }
 
     & p {
-      max-width: 100%;
+      line-height: 20px;
+      max-width: 90%;
+      letter-spacing: -0.5px;
+    }
+
+    & h3 {
+      margin-bottom: 23px;
     }
   }
 
   .faq__title {
     margin: 0;
     font-size: 22px;
-    line-height: 40px;
+    line-height: 26px;
     max-width: 80%;
+    letter-spacing: -0.7px;
   }
 
   .faq__button {
     right: 30px;
+    top: 30px;
   }
 }
 
 @media (max-width: $mobile-width) {
   .faq__container {
     max-width: 100%;
-    padding: 33px 0;
-    gap: 30px;
+    padding: 35px 0;
+    gap: 35px;
 
     & h2 {
       font-size: 20px;
       line-height: 20px;
+      letter-spacing: -0.5px;
     }
   }
 
@@ -268,9 +329,15 @@
   }
 
   .faq__item.is-active {
+    padding: 20px 15px 15px;
+
+    & h3 {
+      margin-bottom: 17px;
+    }
+
     & button {
-      top: 40px;
       right: 15px;
+      top: 40px;
     }
 
     & p {
@@ -287,5 +354,7 @@
 
   .faq__button {
     right: 15px;
+    top: 50%;
+    transform: translate(0, -50%);
   }
 }
