--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -13,11 +13,8 @@
   transform: scale(1.2);
   visibility: hidden;
   opacity: 0;
-  transition: opacity $trans-modal, transform $trans-modal,
-    visibility $trans-modal;
-
+  transition: opacity $trans-modal, transform $trans-modal, visibility $trans-modal;
   pointer-events: none;
-
   -ms-overflow-style: none;
   scrollbar-width: none;
 
@@ -46,13 +43,14 @@
 
   &__content {
     position: relative;
-    width: 510px;
-    padding: 50px 80px 60px;
+    max-width: 510px;
+    min-height: 611px;
+    height: fit-content;
+    padding: 55px 80px;
     background-color: $color-default-white;
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   &__close-btn {
@@ -85,7 +83,7 @@
       outline: 1px solid #275699;
     }
 
-    &:active svg{
+    &:active svg {
       @include active;
       color: #275699;
     }
@@ -123,7 +121,6 @@
     transform: scale(1);
     visibility: visible;
     opacity: 1;
-
     pointer-events: auto;
   }
 
@@ -133,14 +130,60 @@
     line-height: 36px;
     color: #316dc2;
     font-weight: 400;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: -1px;
   }
 
   &__description {
     margin: 0;
     display: flex;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    width: 100%;
+    letter-spacing: -0.5px;
+  }
+
+  &__form {
+    width: 100%;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .modal {
+    &__wrapper {
+      min-height: 602px;
+      padding: 204px 99px;
+    }
+
+    &__content {
+      position: relative;
+      max-width: 510px;
+      min-height: 602px;
+      height: fit-content;
+      padding: 55px 80px;
+      background-color: $color-default-white;
+      border-radius: 16px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__title {
+      font-size: 28px;
+      line-height: 28px;
+      margin-bottom: 14px;
+    }
+
+    &__description {
+      font-size: 16px;
+      line-height: 20px;
+      margin-bottom: 22px;
+    }
+
+    &__form {
+      width: 100%;
+    }
   }
 }
 
@@ -153,8 +196,10 @@
 
     &__content {
       position: relative;
+      align-items: center;
       width: 100%;
-      padding: 40px 15px;
+      padding: 38px 15px;
+      min-height: 521px;
     }
 
     &__close-btn {
@@ -168,16 +213,17 @@
       margin: 0;
       font-size: 18px;
       line-height: 18px;
-      margin-bottom: 15px;
+      margin-bottom: 6px;
+      letter-spacing: -0.3px;
     }
 
     &__description {
       margin: 0;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
       font-size: 14px;
       line-height: 20px;
       text-align: center;
-      max-width: 210px;
+      max-width: 200px;
     }
   }
 }
