--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,5 +1,5 @@
 .about__container {
-  padding: 120px 15px 60px;
+  padding: 120px 0 60px;
   max-width: 1240px;
   margin: 0 auto;
   display: flex;
@@ -20,12 +20,14 @@
   max-width: 477px;
 
   & h2 {
+    padding-top: 5px;
     width: 100%;
     font-size: 50px;
     line-height: 50px;
     font-weight: 400;
     color: #316dc2;
     margin: 0;
+    letter-spacing: -1.5px;
   }
 
   & p {
@@ -41,7 +43,7 @@
 .about__text {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 32px;
   max-width: 498px;
 
   & h3 {
@@ -69,7 +71,7 @@
   width: 100%;
   background-color: #316dc2;
   border-radius: 20px;
-  padding: 70px 106px 56px;
+  padding: 92px 106px 56px 126px;
 
   & ul {
     margin: 0;
@@ -86,7 +88,7 @@
     max-width: 478px;
     display: flex;
     align-items: center;
-    padding: 30px 60px;
+    padding: 30px 50px 30px 60px;
     border: 1px solid $color-default-white;
     border-radius: 16px;
     justify-content: space-between;
@@ -101,33 +103,35 @@
       background-size: 18px 22px;
       background-repeat: no-repeat;
       background-position: center;
-      top: -21px;
+      top: -23px;
       left: -21px;
     }
 
     & span {
-      max-width: 171px;
+      display: flex;
       font-size: 26px;
       line-height: 30px;
       font-weight: 400;
       color: $color-default-white;
-      letter-spacing: -0.56px;
+      letter-spacing: -1px;
       text-transform: uppercase;
+      width: fit-content;
     }
 
     & p {
-      max-width: 180px;
+      width: 100%;
       line-height: 20px;
       color: #f0efe9;
       margin: 0;
       letter-spacing: -0.5px;
+      margin-left: 30px;
     }
   }
 }
 
 @media (max-width: $tablet-width) {
   .about__container {
-    padding: 100px 30px 50px;
+    padding: 95px 30px 50px;
     max-width: 100%;
     margin: 0;
   }
@@ -135,17 +139,19 @@
   .about__text-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     max-width: 498px;
   }
 
   .about__title {
     max-width: 100%;
+    gap: 25px;
 
     & h2 {
       width: 100%;
       font-size: 34px;
       line-height: 50px;
+      letter-spacing: -1px;
     }
 
     & p {
@@ -155,27 +161,32 @@
   }
 
   .about__text {
-    gap: 30px;
+    gap: 20px;
     max-width: 100%;
 
     & h3 {
       font-size: 28px;
       line-height: 28px;
+      letter-spacing: -0.5px;
     }
 
     & p {
       line-height: 20px;
+      letter-spacing: -0.5px;
+      margin-bottom: 16px;
     }
   }
 
   .about__button {
-    max-width: 221px;
+    max-width: 277px;
     font-size: 12px;
     line-height: 12px;
+    letter-spacing: 0.8px;
+    padding-left: 30px;
   }
 
   .about__advantages {
-    padding: 40px;
+    padding: 62px 60px 40px;
 
     & ul {
       column-gap: 50px;
@@ -187,20 +198,23 @@
       min-width: 264px;
       flex-direction: column;
       align-items: flex-start;
-      padding: 30px;
+      padding: 30px 30px 20px;
       justify-content: flex-start;
-      gap: 12px;
+      gap: 8px;
       min-height: 168px;
 
       & span {
         max-width: 61%;
         font-size: 20px;
         line-height: 22px;
+        letter-spacing: -0.7px;
       }
 
       & p {
         max-width: 100%;
         line-height: 20px;
+        margin: 0;
+        letter-spacing: -0.6px;
       }
     }
   }
@@ -208,7 +222,8 @@
 
 @media (max-width: $mobile-width) {
   .about__container {
-    padding: 67px 0 33px;
+    padding: 64px 0 33px;
+    gap: 40px;
   }
 
   .about__text-wrapper {
@@ -217,22 +232,24 @@
 
   .about__title {
     max-width: 100%;
-    gap: 21px;
+    gap: 13px;
 
     & h2 {
       width: 100%;
       font-size: 20px;
       line-height: 20px;
+      letter-spacing: -0.5px;
     }
 
     & p {
       font-size: 16px;
       line-height: 22px;
+      letter-spacing: -0.5px;
     }
   }
 
   .about__text {
-    gap: 20px;
+    gap: 10px;
 
     & h3 {
       font-size: 18px;
@@ -241,8 +258,15 @@
 
     & p {
       font-size: 14px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      letter-spacing: -0.3px;
     }
+  }
+
+  .about__button {
+    max-width: 221px;
+    letter-spacing: -0.3px;
+    padding-left: 20px;
   }
 
   .about__advantages {
@@ -257,20 +281,22 @@
     & li {
       max-width: 100%;
       min-width: 100%;
-      padding: 24px 20px;
-      gap: 8px;
+      padding: 20px 0 20px 20px;
+      gap: 5px;
       min-height: 128px;
 
       & span {
         max-width: 100%;
         font-size: 16px;
         line-height: 20px;
+        letter-spacing: -0.5px;
       }
 
       & p {
         max-width: 100%;
         font-size: 14px;
         line-height: 20px;
+        letter-spacing: -0.4px;
       }
     }
   }
