--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,7 +6,7 @@
   grid-template-areas:
     "logo nav social"
     "rights rights copyright";
-  row-gap: 25px;
+  row-gap: 27px;
 }
 
 .footer__logo {
@@ -43,6 +43,7 @@
   grid-area: nav;
   display: flex;
   align-items: center;
+  margin-left: -115px;
 
   & ul {
     margin: 0;
@@ -50,7 +51,7 @@
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    max-width: 700px;
+    max-width: 630px;
     gap: 10px;
   }
 
@@ -58,6 +59,7 @@
     padding: 0 10px;
     font-weight: 400;
     color: #484848;
+    letter-spacing: -0.5px;
 
     &:hover {
       @include hover;
@@ -67,6 +69,10 @@
     &:focus {
       @include focus;
       color: #316dc2;
+    }
+
+    &:focus-visible {
+      outline: none;
     }
 
     &:active {
@@ -126,6 +132,10 @@
       background-color: #275699;
     }
 
+    &:focus-visible {
+      outline: none;
+    }
+
     &:active svg {
       opacity: 100%;
     }
@@ -137,6 +147,8 @@
   line-height: 18px;
   font-weight: 400;
   grid-area: rights;
+  max-width: 45%;
+  letter-spacing: -0.5px;
 }
 
 .footer__copyright {
@@ -144,13 +156,19 @@
   line-height: 18px;
   font-weight: 400;
   grid-area: copyright;
-  padding-bottom: 2px;
   border-bottom: 1px solid #484848;
-  width: fit-content;
   justify-self: end;
+  max-width: 100%;
+  letter-spacing: -0.5px;
 
   &:hover {
     @include hover;
+    color: #316dc2;
+    border-color: #316dc2;
+  }
+
+  &:focus {
+    @include focus;
     color: #316dc2;
     border-color: #316dc2;
   }
@@ -175,6 +193,10 @@
     background-color: #316dc2;
     left: 0;
     bottom: 3px;
+  }
+
+  &:focus-visible {
+    outline: none;
   }
 
   &:active {
@@ -210,7 +232,7 @@
 
     & ul {
       max-width: 565px;
-      gap: 5px;
+      gap: 4px;
     }
 
     & a {
@@ -227,12 +249,17 @@
     font-size: 12px;
     line-height: 12px;
     opacity: 60%;
+    height: fit-content;
   }
 
   .footer__copyright {
     font-size: 12px;
     line-height: 12px;
     justify-self: flex-start;
+    height: fit-content;
+    padding-bottom: 1px;
+    align-self: flex-end;
+    margin-bottom: 10px;
   }
 }
 
@@ -241,24 +268,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 30px 0 40px;
   }
 
   .footer__logo {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     order: 1;
   }
 
   .footer__nav {
     margin-left: 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     order: 2;
 
     & ul {
       justify-content: center;
-      max-width: 100%;
-      column-gap: 25px;
-      row-gap: 20px;
+      max-width: 290px;
+      column-gap: 30px;
+      row-gap: 5px;
     }
 
     & a {
@@ -281,12 +309,12 @@
     }
   }
 
-  .footer__vk svg{
+  .footer__vk svg {
     width: 12px;
     height: 7px;
   }
 
-  .footer__ok svg{
+  .footer__ok svg {
     width: 7px;
     height: 12px;
   }
@@ -300,11 +328,13 @@
     line-height: 14px;
     margin-bottom: 15px;
     order: 4;
+    max-width: 100%;
   }
 
   .footer__copyright {
     line-height: 14px;
     margin-bottom: 10px;
     order: 3;
+    align-self: center;
   }
 }
