--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,7 +1,7 @@
 form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  width: 100%;
 
   & .custom-select {
     display: flex;
@@ -12,18 +12,20 @@ form {
   }
 }
 
-.form__select {
+.form .form__select {
   margin: 0;
   padding: 0;
+  margin-bottom: 20px;
 }
 
 .form__input {
   width: 100%;
+  margin-bottom: 18px;
 
   & label {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 5px;
     font-size: 14px;
     line-height: 18px;
     color: rgba(72, 72, 72, 0.8);
@@ -46,7 +48,6 @@ form {
     border: 1px solid rgba(72, 72, 72, 0.3);
     border-radius: 8px;
     min-height: 50px;
-    padding: 5px 15px;
     padding: 12px 20px;
     font-size: 14px;
     line-height: 20px;
@@ -74,7 +75,7 @@ form {
       background-color: rgba(169, 175, 183, 0.2);
     }
 
-    &:invalid {
+    &:not(:placeholder-shown) {
       border-color: #ff5e66;
       background-color: rgba(255, 94, 102, 0.2);
     }
@@ -83,15 +84,16 @@ form {
 
 .form__select-text {
   font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
   font-weight: 400;
 }
 
 .form__select-label {
-  margin-bottom: 12px;
+  margin-bottom: 0;
   font-size: 14px;
   line-height: 18px;
   color: rgba(72, 72, 72, 0.8);
+  letter-spacing: -0.5px;
 }
 
 .form__select-error {
@@ -147,20 +149,23 @@ form {
     cursor: pointer;
     position: relative;
     min-height: 20px;
+    margin-bottom: 30px;
+
+    & input[type="checkbox"]:checked + .form__sort::before {
+      position: absolute;
+      content: "";
+      width: 10px;
+      height: 10px;
+      background-image: url("../../img/svg/check.svg");
+      background-repeat: no-repeat;
+      top: 6px;
+      left: 5px;
+    }
   }
 
-  & input[type="checkbox"]:checked + .form__sort::before {
-    position: absolute;
-    content: "";
-    width: 10px;
-    height: 10px;
-    background-image: url("../../img/svg/check.svg");
-    background-repeat: no-repeat;
-    top: 5px;
-    left: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  & label:hover > .form__sort {
+    background-color: transparent;
+    outline: 1px solid rgba(49, 109, 194, 1);
   }
 
   & input {
@@ -177,31 +182,86 @@ form {
   align-self: center;
 }
 
+.form__check input[type="checkbox"]:disabled + .form__sort {
+  background-color: rgba(255, 255, 255, 0.6);
+  outline: 1px solid rgba(255, 255, 255, 1);
+}
+
+.form__check input[type="checkbox"]:disabled + .form__check-error {
+  display: none;
+}
+
+.form__check input[type="checkbox"]:checked:disabled + .form__sort {
+  background-color: #a9afb7;
+  outline: 1px solid #a9afb7;
+  cursor: default;
+}
+
+.form__check input[type="checkbox"]:checked:disabled + .form__sort::before {
+  background-image: url("../../img/svg/check.svg");
+}
+
+.form__check input[type="checkbox"]:checked + .form__sort {
+  background-color: #316dc2;
+}
+
+.form__check:hover input[type="checkbox"]:not(:disabled):checked + .form__sort,
+.form__check:focus input[type="checkbox"]:not(:disabled):checked + .form__sort {
+  background-color: $color-default-white;
+  outline: 1px solid #316dc2;
+}
+
+.form__check:hover input[type="checkbox"]:not(:disabled):checked + .form__sort::before,
+.form__check:focus input[type="checkbox"]:not(:disabled):checked + .form__sort::before {
+  background-image: url("../../img/svg/check-blue.svg");
+}
+
 .form__sort {
   position: absolute;
   content: "";
   width: 20px;
   height: 20px;
-  background-color: #316dc2;
+  background-color: transparent;
+  outline: 1px solid rgb(49, 109, 194, 0.7);
   top: 1px;
   left: 0;
   border-radius: 2px;
 
-  &:not(:disabled):hover {
-    @include hover;
-    background-color: #b4adad;
-  }
-
   &:not(:disabled):focus {
-    @include focus;
-    background-color: #316dc2;
-    outline: 1px solid #a9afb7;
+    background-color: transparent;
+    outline: 1px solid rgba(49, 109, 194, 1);
   }
 }
 
+.form__check-error {
+  color: #ff5e66;
+  font-size: 12px;
+  line-height: 12px;
+  margin-top: 5px;
+}
+
 .form__button {
-  max-width: 100%;
+  width: 194px;
+  max-width: 194px;
   margin: 0 auto;
+  letter-spacing: -0.5px;
+  padding: 10px 75px 10px 30px;
+}
+
+@media (max-width: $tablet-width) {
+  .form__input {
+    width: 100%;
+    margin-bottom: 18px;
+
+    & label {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      font-size: 14px;
+      line-height: 18px;
+      color: rgba(72, 72, 72, 0.8);
+    }
+  }
 }
 
 @media (max-width: $mobile-width) {
@@ -209,20 +269,43 @@ form {
     width: 100%;
 
     & form {
-      gap: 15px;
+      gap: 13px;
     }
   }
 
   .form__input {
+    margin-bottom: 0;
+
     & label {
       gap: 8px;
       line-height: 14px;
     }
+
+    & input {
+      min-height: 44px;
+    }
+  }
+
+  .form__check {
+    & label {
+      margin-bottom: 12px;
+    }
+  }
+
+  .form .form__select {
+    margin-bottom: 1px;
   }
 
   .form__select-label {
-    margin-bottom: 8px;
+    margin-bottom: 0;
     line-height: 14px;
+    letter-spacing: 0.78px;
+  }
+
+  .form__input .form__select-button {
+    height: 44px;
+    min-height: 44px;
+    padding: 10px 20px;
   }
 
   .form__select-error {
@@ -245,7 +328,8 @@ form {
 
   .form__button {
     max-width: 100%;
+    width: 100%;
     margin: 0;
-    padding: 0 60px 0 70px;
+    padding: 0 60px 0 75px;
   }
 }
