--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,8 +1,8 @@
 .news {
-  padding: 120px 0 60px;
+  padding: 126px 0 60px;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 41px;
   align-items: center;
 
   & h2 {
@@ -11,31 +11,48 @@
     font-weight: 400;
     color: #316dc2;
     margin: 0;
+    max-width: 1240px;
+    padding: 0 15px;
+    letter-spacing: -1.5px;
   }
+}
+
+.news__controls-swiper {
+  max-width: 1270px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.news__controls-wrapper {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 15px;
 }
 
 .news__controls-slide {
   width: fit-content;
-
-  &.is-active {
-    border: 1px solid #316dc2;
-    border-radius: 20px;
-    color: rgb(49, 110, 196, 1);
-  }
 }
 
 .news__control {
-  padding: 14px 21px 14px 22px;
+  padding: 12px 26px;
   border: none;
   font-size: 14px;
   line-height: 14px;
   font-weight: 500;
   text-transform: uppercase;
   color: rgb(49, 110, 196, 0.6);
-  letter-spacing: 0.28px;
+  letter-spacing: -0.3px;
   cursor: pointer;
   background-color: transparent;
   border-radius: 20px;
+  min-height: 40px;
+
+  &.is-active {
+    border: 1px solid #316dc2;
+    border-radius: 20px;
+    color: rgb(49, 110, 196, 1);
+  }
 
   &:hover {
     @include hover;
@@ -45,6 +62,10 @@
   &:focus {
     @include focus;
     color: #316dc2;
+  }
+
+  &:focus-visible {
+    outline: none;
   }
 
   &:active {
@@ -65,7 +86,6 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 40px;
   align-items: center;
 }
 
@@ -87,6 +107,7 @@
   height: auto;
   border-radius: 12px;
   background-size: cover;
+  background-color: #ffffc3;
 
   &:first-child {
     max-width: 604px;
@@ -96,14 +117,24 @@
       display: flex;
       flex-direction: column;
 
+      & span {
+        padding-top: 10px;
+      }
+
       & h3 {
         max-width: 291px;
-        padding: 18px 18px 6px 0;
+        padding: 15px 0 0;
         box-sizing: content-box;
+        letter-spacing: -0.7px;
+      }
+
+      & div {
+        padding-top: 5px;
       }
 
       & p {
-        max-width: 307px;
+        max-width: 325px;
+        letter-spacing: -0.5px;
       }
     }
   }
@@ -139,7 +170,7 @@
     font-size: 12px;
     line-height: 12px;
     color: #275699;
-    padding: 9px 12px 6px 0;
+    padding: 5px 12px 6px 0;
 
     &::before {
       position: absolute;
@@ -167,8 +198,7 @@
   & h3 {
     position: relative;
     max-width: 214px;
-    padding: 10px 10px 4px 0;
-    box-sizing: content-box;
+    padding: 6px 10px 0 0;
     background-color: #f0efe9;
     font-size: 24px;
     line-height: 26px;
@@ -177,6 +207,7 @@
     border-radius: 0 12px 0 0;
     margin: 0;
     box-sizing: border-box;
+    letter-spacing: -0.7px;
 
     &::after {
       position: absolute;
@@ -193,12 +224,13 @@
   & div {
     position: relative;
     display: flex;
-    padding: 13px 18px 16px 0;
+    padding: 0 18px 5px 0;
     background-color: #f0efe9;
     border-radius: 0 12px 0 12px;
     gap: 16px;
     align-items: center;
     min-height: 57px;
+    letter-spacing: -0.5px;
 
     &::after {
       position: absolute;
@@ -238,6 +270,10 @@
       @include hover;
       color: #316dc2;
       transform: rotate(45deg);
+    }
+
+    &:focus-visible {
+      outline: none;
     }
 
     &:focus {
@@ -305,6 +341,10 @@
   &:focus {
     @include focus;
     background-color: $color-default-white;
+  }
+
+  &:focus-visible {
+    outline: none;
   }
 
   &:active {
@@ -382,12 +422,30 @@
 @media (max-width: $tablet-width) {
   .news {
     padding: 100px 0 50px;
-    gap: 0px;
+    gap: 0;
 
     & h2 {
       font-size: 34px;
       margin-bottom: 30px;
+      max-width: 100%;
+      padding: 0 45px;
+      letter-spacing: -1px;
     }
+  }
+
+  .news__controls-swiper {
+    max-width: 100%;
+    width: 100%;
+    padding: 0 49px;
+    margin: 0;
+  }
+
+  .news__controls-wrapper {
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    justify-content: center;
   }
 
   .news__container {
@@ -398,12 +456,13 @@
   }
 
   .news__control {
-    padding: 11px 15px;
+    padding: 11px 18px;
+    letter-spacing: 0;
   }
 
   .swiper .news__wrapper {
     min-height: 730px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
 
   .news__slide {
@@ -418,16 +477,21 @@
       & .news__text {
         max-width: 240px;
 
+        & div {
+          padding: 7px 18px 10px 0;
+        }
+
         & h3 {
           font-size: 20px;
           line-height: 24px;
           max-width: 207px;
-          padding: 10px 16px 6px 0;
+          padding: 4px 16px 2px 0;
           box-sizing: border-box;
         }
 
         & p {
           max-width: 176px;
+          padding: 0;
         }
       }
     }
@@ -452,20 +516,24 @@
   .news__text {
     max-width: 240px;
 
+    & span {
+      padding: 7px 12px 5px 0;
+    }
+
     & h3 {
       font-size: 20px;
       line-height: 24px;
       max-width: 207px;
-      padding: 10px 16px 6px 0;
       box-sizing: border-box;
-    }
-
-    & div {
-      padding: 12px 18px 15px 0;
+      padding: 6px 0 0 0;
     }
 
     & p {
       line-height: 20px;
+    }
+
+    & div {
+      padding: 7px 18px 10px 0;
     }
   }
 }
@@ -473,12 +541,29 @@
 @media (max-width: $mobile-width) {
   .news {
     overflow: hidden;
-    padding:72px 0 33px;
+    padding: 68px 0 33px;
 
     & h2 {
       font-size: 20px;
       line-height: 20px;
+      padding: 0;
+      letter-spacing: -0.5px;
+      margin-bottom: 28px;
     }
+  }
+
+  .news__controls-swiper {
+    max-width: 100%;
+    padding: 0;
+    padding-left: 14px;
+    margin: 0;
+    margin-bottom: 23px;
+  }
+
+  .news__controls-wrapper {
+    flex-wrap: nowrap;
+    row-gap: 15px;
+    justify-content: flex-start;
   }
 
   .news__container {
@@ -488,34 +573,32 @@
     gap: 24px;
   }
 
-  .news__controls-swiper {
-    width: 100%;
-    margin-left: 15px;
-  }
-
-  .news__controls-wrapper {
-    flex-wrap: nowrap;
-  }
-
   .news__control {
     font-size: 12px;
     line-height: 12px;
     padding: 8px 12px;
+    min-height: 29px;
+    letter-spacing: -0.2px;
   }
 
   .swiper .news__wrapper {
     min-height: 590px;
-    margin-bottom: 24px;
+    margin-bottom: 0;
+  }
+
+  .news__slide--travel {
+    background-position: center;
   }
 
   .news__slide {
     max-width: 100%;
     min-width: 290px;
-    min-height: 330px;
-    margin-top: 30px;
+    min-height: 230px;
 
     &:first-child {
+      min-height: 330px;
       max-width: 100%;
+      margin-top: 0;
 
       & .news__text {
         max-width: 263px;
@@ -533,7 +616,10 @@
 
         & p {
           max-width: 207px;
-          line-height: 20px;
+          font-size: 12px;
+          line-height: 14px;
+          letter-spacing: -0.5px;
+          padding: 0;
         }
       }
     }
@@ -546,16 +632,19 @@
         line-height: 18px;
         max-width: 200px;
         padding: 10px 18px 4px 0;
-        letter-spacing: -0.6px;
       }
 
       & div {
-        padding: 12px 10px 10px 0;
+        min-height: 52px;
+        padding: 0 10px 0 0;
       }
 
       & p {
         max-width: 207px;
-        line-height: 20px;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: -0.5px;
+        padding: 0;
       }
     }
   }
