--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -23,6 +23,7 @@
     line-height: 60px;
     color: #316dc2;
     font-weight: 400;
+    letter-spacing: -2px;
   }
 }
 
@@ -51,8 +52,7 @@
 .programs__buttons {
   position: absolute;
   display: flex;
-  gap: 16px;
-  background-color: transparent;
+  gap: 12px;
   z-index: 2;
   right: 15px;
   top: 50%;
@@ -119,7 +119,7 @@
   order: 2;
   max-width: 1270px;
   margin: 0 auto;
-  margin-bottom: 40px;
+  margin-bottom: 48px;
   padding: 0 15px;
 }
 
@@ -133,6 +133,7 @@
   height: auto;
   border-radius: 12px;
   background-size: cover;
+  background-color: #ffffc3;
 
   &::after {
     position: absolute;
@@ -174,11 +175,12 @@
     margin: 0;
     width: fit-content;
     text-align: start;
-    padding: 9px 12px 6px 18px;
+    padding: 10px 12px 2px 18px;
     font-size: 24px;
     line-height: 26px;
     color: #316dc2;
     font-weight: 400;
+    letter-spacing: -1px;
 
     &::after {
       position: absolute;
@@ -193,7 +195,7 @@
 
   & div {
     display: flex;
-    padding: 5px 18px;
+    padding: 1px 18px;
     background-color: $color-default-white;
     border-radius: 0 12px 12px 12px;
     gap: 16px;
@@ -234,6 +236,10 @@
       background-color: $color-default-white;
     }
 
+    &:focus-visible {
+      outline: none;
+    }
+
     &:focus svg {
       @include focus;
       color: #316dc2;
@@ -258,16 +264,28 @@
 }
 
 @media (max-width: $tablet-width) {
+  .programs {
+    padding-bottom: 111px;
+  }
+
   .programs__container {
     padding: 50px 30px 0;
     max-width: 100%;
     margin: 0;
   }
 
+  .programs__link {
+    min-width: 232px;
+    letter-spacing: -0.5px;
+    padding-left: 30px;
+  }
+
   .programs__top {
     & h2 {
       font-size: 34px;
       line-height: 50px;
+      letter-spacing: -1.5px;
+      padding-top: 3px;
     }
   }
 
@@ -286,7 +304,7 @@
   .programs__slider {
     max-width: 100%;
     margin: 0;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     padding: 0 0 0 45px;
   }
 
@@ -308,13 +326,14 @@
 
   .programs__text {
     max-width: 263px;
-    min-height: 115px;
+    min-height: 100px;
 
     & h3 {
       min-width: 173px;
-      padding: 9px 12px 6px 18px;
+      padding: 13px 12px 0 18px;
       font-size: 20px;
       line-height: 24px;
+      letter-spacing: -0.7px;
     }
 
     & div {
@@ -342,18 +361,20 @@
 
   .programs__top {
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 33px;
 
     & h2 {
       font-size: 20px;
       line-height: 20px;
+      max-width: 80%;
+      letter-spacing: -0.7px;
     }
   }
 
   .programs__link {
     position: absolute;
     bottom: 67px;
-    width: 203px;
+    min-width: 203px;
   }
 
   .programs__buttons {
@@ -361,7 +382,7 @@
     right: 15px;
     padding-left: 0;
     background-color: transparent;
-    top: 33px;
+    top: 36px;
     transform: none;
   }
 
@@ -377,12 +398,12 @@
   .programs__slider {
     max-width: 100%;
     margin: 0;
-    margin-bottom: 72px;
+    margin-bottom: 29px;
     padding: 0 15px;
   }
 
   .programs__slide {
-    padding: 10px;
+    padding: 10px 10px 18px;
     max-width: 100%;
     min-height: 400px;
   }
@@ -407,12 +428,15 @@
       min-width: 146px;
       font-size: 16px;
       line-height: 18px;
+      padding: 20px 12px 0 18px;
+      min-height: 42px;
     }
 
     & div {
       min-height: 69px;
       width: 100%;
       max-width: 100%;
+      padding: 0 18px 0;
     }
 
     & p {
@@ -421,6 +445,7 @@
       line-height: 14px;
       max-width: 188px;
       letter-spacing: -0.4px;
+      padding-top: 0;
     }
   }
 }
